[#91] Correct alignment in search form

--- a/static/css/app.css
+++ b/static/css/app.css
@@ -133,22 +133,37 @@ h5 {
     margin: 0;
     padding: 0; }
   .search-form .search-field-container {
-    border: 1px solid #cacaca;
     background: white;
-    box-shadow: inset 0 1px 2px rgba(10, 10, 10, 0.1); }
+    line-height: 1rem;
+    height: 50px; }
     .search-form .search-field-container input, .search-form .search-field-container i {
-      display: inline-block; }
+      border: 1px solid #cacaca;
+      display: inline-block;
+      height: 50px;
+      float: left; }
     .search-form .search-field-container i {
-      padding: 0 1rem; }
+      text-align: center;
+      padding: 1rem;
+      width: 50px;
+      display: none; }
+      @media (min-width: 1200px) {
+        .search-form .search-field-container i {
+          display: inline-block; } }
     .search-form .search-field-container input[type=text] {
-      max-width: 50%;
-      border: none;
+      width: 80%;
+      font-size: 1rem;
+      line-height: 1rem;
       box-shadow: none;
       margin: 0;
       padding: 0; }
+      @media (min-width: 1200px) {
+        .search-form .search-field-container input[type=text] {
+          border-left: none; } }
     .search-form .search-field-container input[type=submit] {
-      margin: 0;
-      float: right; }
+      border-left: none;
+      width: 50px;
+      height: 50px;
+      margin: 0; }
 
 .license-logo {
   max-width: 25px;
