--- a/static/scss/_forms.scss
+++ b/static/scss/_forms.scss
@@ -69,28 +69,42 @@
   }
 
   .search-field-container {
-    border: 1px solid #cacaca;
-    background: white;
 
-    box-shadow: inset 0 1px 2px hsla(0,0%,4%,.1);
+    background: white;
+    line-height: 1rem;
+    height: 50px;
 
     input, i {
+      border: 1px solid #cacaca;
       display: inline-block;
+      height: 50px;
+      float: left;
     }
     i {
-      padding: 0 1rem;
+      text-align: center;
+      padding: 1rem;
+      width: 50px;
+      display: none;
+      @include for-size(tablet-landscape-up) {
+        display: inline-block;
+      }
     }
-
     input[type=text] {
-      max-width: 50%;
-      border: none;
+      width: 80%;
+      font-size: 1rem;
+      line-height: 1rem;
       box-shadow: none;
       margin: 0;
       padding: 0;
+      @include for-size(tablet-landscape-up) {
+        border-left: none;
+      }
     }
     input[type=submit] {
+      border-left: none;
+      width: 50px;
+      height: 50px;
       margin: 0;
-      float: right;
     }
   }
 }
